sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
   	do{
   		 for(i<-0 to getNombreValeurs()-2){
   		 	if (plusPetit(i,i+1)){
   		echange(i,i+1) 
   		}
   		 }	
   	}while(i<i+1)
  }
  
   }
}
